Home fix, Client fix css

--- a/MauiBlazor/Pages/General/Client.razor
+++ b/MauiBlazor/Pages/General/Client.razor
@@ -30,7 +30,7 @@ else
     {
         if (!(await signalr.GroupNameExists(settings.Room)))
         {
-            NameExists = "Group doesn't exist";
+            NameExists = "Room does not exist";
 
             await InvokeAsync(StateHasChanged);
             return false;
