--- a/MauiBlazor/Pages/General/Lobby.razor
+++ b/MauiBlazor/Pages/General/Lobby.razor
@@ -6,7 +6,7 @@
 
 @if(page == Pages.ClientLobby)
 {
-    <h3>Lobby - waiting...</h3>
+    <h3>Waiting for leader to do something...</h3>
 
     @foreach(var message in messages)
     {
