--- a/MauiBlazor/wwwroot/css/css.css
+++ b/MauiBlazor/wwwroot/css/css.css
@@ -3,6 +3,7 @@
     --header-bg: #88af7c;
     --backarrow-size: 5vh;
     --hamburger-size: 4.5vh;
+    --button-green: hsl(107, 50%, 72%);
 }
 
 .app-container {
@@ -146,6 +147,13 @@ button.choice-button {
     width: 90vw;
     border-radius: 10px;
     background-color: #888888;
+}
+
+.main div {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%
 }
 
 .main a {
