--- a/MauiBlazor/wwwroot/css/css.css
+++ b/MauiBlazor/wwwroot/css/css.css
@@ -101,6 +101,7 @@
         flex-direction: column;
         justify-content: space-between;
         align-items: center;
+        position: relative;
     }
 
     .app-container .footer {
