--- a/MauiBlazor/Pages/PokerPlanning/LeaderPokerSelectStyle.razor
+++ b/MauiBlazor/Pages/PokerPlanning/LeaderPokerSelectStyle.razor
@@ -27,7 +27,7 @@
 		<img src="/Images/comments.svg" class="@(selectedStyle=="User stories"?"selected":"")" />
 	</button>
 </div>
-		<button @onclick="SendQuestion">Send Question</button>
+		<button @onclick="SendQuestion" class="styled">Send Question</button>
 
 @code {
 	[Parameter]
