--- a/MauiBlazor/Pages/General/Leader.razor
+++ b/MauiBlazor/Pages/General/Leader.razor
@@ -3,18 +3,17 @@
 @using _SharedSignalR.Models
 
 @inject ISignalrContext signalR
-<div>
+<div class="leader-container">
 	@if (nav == Pages.LeaderCreateRoom)
 	{
+	<div class="leader-room-create-container">
 		<h1>@roomName</h1>
 		<div>
-			<button disabled="@(roomsInUse is null)" @onclick="GenerateRandomRoomName">@(roomName==""?"Get room name":"Get another name")</button>
-			<button @onclick="CreateRoom">Create Room</button>
+			<button class="styled" disabled="@(roomsInUse is null)" @onclick="GenerateRandomRoomName">@(roomName == "" ? "Get room name" : "Get another name")</button>
+			<button class="styled" @onclick="CreateRoom">Create Room</button>
 		</div>
 		<div>
-			<div>
-				<p>@errorMessage</p>
-			</div>
+			<p>@errorMessage</p>
 			@if (signalR.Connected)
 			{
 				<code>Connected</code>
@@ -24,6 +23,7 @@
 				<code>Not connected</code>
 			}
 		</div>
+	</div>
 	}
 	else
 	{
@@ -67,7 +67,7 @@
 	{
 		signalR.Settings.Room = roomName;
 
-		if(!(await signalR.AddGroupName(roomName)))
+		if (!(await signalR.AddGroupName(roomName)))
 		{
 			errorMessage = "Room name already exists";
 			return;
@@ -136,10 +136,11 @@
 			"Zone",
 
 	};
-		while(String.IsNullOrEmpty(roomName) || roomsInUse.Contains(roomName))
+		do
 		{
 			roomName = firstWord[random.Next(firstWord.Length)] + " " + secondWord[random.Next(secondWord.Length)];
 		}
+		while (roomsInUse.Contains(roomName));
 	}
 
 
