--- a/MauiBlazor/Pages/General/LeaderSelectMode.razor.css
+++ b/MauiBlazor/Pages/General/LeaderSelectMode.razor.css
@@ -2,10 +2,28 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
     padding: 0.5em;
-    
+	height: 400px;
+	justify-items: center;
+    box-sizing: border-box;
+}
+.button-container > button{
+	width: 200px;
+	height: 200px;
+	margin: 1em;
+}
+.button-container > button > img {
+	width: 100%;
+	height: 100%;
+	object-fit: contain;
+	box-sizing: border-box;
+	padding: 5px;
 }
 button {
     margin: 0.5em;
     border: none;
     background-color: inherit;
+	height: max-content;
+}
+.selected {
+	border: 5px solid red;
 }
