--- a/MauiBlazor/wwwroot/css/css.css
+++ b/MauiBlazor/wwwroot/css/css.css
@@ -12,13 +12,14 @@
 
 .app-container {
     width: 100%;
-    height: 98vh;
+    height: 99vh;
     padding-bottom: 30px;
     display: flex;
     flex-direction: column;
     background-color: var(--main-bg);
     justify-content: space-between;
     align-items: center;
+    box-sizing: border-box;
 }
 
     .app-container .header {
@@ -187,4 +188,34 @@ button.choice-button {
     height: 100px;
     text-align: left;
     font-size: 18pt;
+}
+button.styled, button.styled:enabled {
+    margin-bottom: 20px;
+    width: 90vw;
+    max-width: 55vw;
+    height: 10vh;
+    font-size: 4vh;
+    background-color: hsl(107, 50%, 72%);
+    border-radius: 2px;
+    border: none;
+    color: #222222;
+    box-shadow: 1px 1px hsl(0deg 0% 0% / 0.050), 0 2px 2px hsl(0deg 0% 0% / 0.052), 0 3px 6px hsl(0deg 0% 0% / 0.054), 0 5px 10px hsl(0deg 0% 0% / 0.056), 0 7px 14px hsl(0deg 0% 0% / 0.058);
+    transition: transform linear 0.15s, box-shadow linear 0.15s, background-color linear 0.1s;
+}
+
+button.styled:enabled:hover, button.styled:enabled:active {
+	transform: scale(1.05);
+	box-shadow: 0 2px 4px hsl(0deg 0% 0% / 0.044), 0 4px 8px hsl(0deg 0% 0% / 0.046), 0 6px 12px hsl(0deg 0% 0% / 0.048), 0 8px 16px hsl(0deg 0% 0% / 0.050), 0 10px 20px hsl(0deg 0% 0% / 0.052);
+	transition: transform linear 0.1s, box-shadow linear 0.1s, background-color linear 0.1s;
+}
+
+button.styled:disabled {
+	background-color: #ececec;
+	transition: background-color linear 0.1s;
+}
+
+button.styled:disabled:hover {
+	background-color: #ececec;
+	transform: scale(1.0);
+	transition: background-color linear 0.1s;
 }
