Fixed Home + clientside css

--- a/MauiBlazor/Pages/General/Home.razor
+++ b/MauiBlazor/Pages/General/Home.razor
@@ -3,7 +3,7 @@
     @if (pageView == Pages.Home)
     {
         <span></span>
-        <div>
+        <div class="button-container">
             <button class="join" @onclick="()=>pageView=Pages.ClientJoinRoom">Join room</button>
             <button class="create" @onclick="()=>pageView=Pages.LeaderCreateRoom">Create room</button>
         </div>
