--- a/MauiBlazor/Pages/General/JoinRoom.razor
+++ b/MauiBlazor/Pages/General/JoinRoom.razor
@@ -1,6 +1,6 @@
 ﻿@using _SharedSignalR.Models;
 <span></span>
-<div>
+<div class="joinroom-container">
     <input type="text" @bind="@username" placeholder="Your name" />
     <input type="text" @oninput="onButtonChange" placeholder="Room name" />
 </div>
