--- a/MauiBlazor/Pages/General/Home.razor.css
+++ b/MauiBlazor/Pages/General/Home.razor.css
@@ -1,7 +1,4 @@
-﻿body {
-    color: #000;
-}
-button.join {
+﻿button.join {
     margin-bottom: 20px;
     margin-right: 15vh;
     width: 30vh;
@@ -45,13 +42,13 @@ button.create:hover {
     transition: transform linear 0.1s;
 }
 
-div {
+.button-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     width: 65vw;
     padding: 5vh;
-    background-color: #ececec;
-    box-shadow: 1px 1px hsl(0deg 0% 0% / 0.050), 0 2px 2px hsl(0deg 0% 0% / 0.052), 0 3px 6px hsl(0deg 0% 0% / 0.054), 0 5px 10px hsl(0deg 0% 0% / 0.056), 0 7px 14px hsl(0deg 0% 0% / 0.058);
 }
-
 
 
 
