--- a/MauiBlazor/Pages/General/Leader.razor.css
+++ b/MauiBlazor/Pages/General/Leader.razor.css
@@ -1,9 +1,26 @@
-.leader-container{
+.leader-container {
 	height: 100%;
+  width: 100%;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-evenly;
+	align-items: center;
+  
 }
 
-.leader-room-create-container{
-	height: 100%;
-	justify-content: space-evenly;
+.leader-room-create-container {
+  height: 100%;
+  justify-content: space-evenly;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.leader-room-create-container > div {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 
+button.styled{
+	font-size: 2.5vh;
 }
