--- a/MauiBlazor/Pages/General/LeaderSelectMode.razor.css
+++ b/MauiBlazor/Pages/General/LeaderSelectMode.razor.css
@@ -27,3 +27,17 @@ button {
 .selected {
 	border: 5px solid red;
 }
+.leader-container {
+	height: 100%;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-evenly;
+	align-items: center;
+	overflow-x: hidden;
+}
+@media screen and (max-width: 550px) {
+	.button-container > button{
+		width: 35vw;
+		height: 35vw;
+	}
+}
