--- a/MauiBlazor/Pages/General/Lobby.razor.css
+++ b/MauiBlazor/Pages/General/Lobby.razor.css
@@ -23,8 +23,7 @@
     position: absolute;
 }
 
-.lobby-container 
-{
+.lobby-container {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -32,4 +31,6 @@
     width: 65vw;
     height: 100%;
     padding: 5vh;
+    overflow-y: auto;
+    overflow-x: hidden;
 }
