--- a/MauiBlazor/Pages/PokerPlanning/LeaderPokerSelectStyle.razor.css
+++ b/MauiBlazor/Pages/PokerPlanning/LeaderPokerSelectStyle.razor.css
@@ -12,7 +12,8 @@
 }
 
 .selected {
-    border: 5px solid red;
+    border: 5px solid #199F63;
+    border-radius: 2%;
 }
 .style-select-btn {
     flex-grow: 1;
