--- a/MauiBlazor/Pages/PokerPlanning/LeaderPokerResultAwait.razor.css
+++ b/MauiBlazor/Pages/PokerPlanning/LeaderPokerResultAwait.razor.css
@@ -1,53 +1,68 @@
 ﻿table {
-    width: 100%;
-    text-align: center;
+  width: 100%;
+  text-align: center;
 }
 
 thead {
-    font-size: 1.5em;
-    text-align: center;
+  font-size: 1.5em;
+  text-align: center;
 }
 
 tbody {
-    font-size: 1.2em;
+  font-size: 1.2em;
 }
 
-    tbody > tr:nth-child(odd) {
-        background-color: darkgrey;
-    }
+tbody > tr:nth-child(odd) {
+  background-color: #dde7df;
+}
 
 .close-btn {
-    font-size: 1em;
-    height: auto;
-    padding: 0.5em;
-    position: absolute;
-    bottom: 0em;
+  font-size: 1em;
+  height: auto;
+  padding: 0.5em;
+  position: absolute;
+  bottom: 0em;
 }
 
-.vote-progress-container{
-    width: 100%;
+.vote-progress-container {
+  width: 100%;
+  position: relative;
+  bottom: 10px;
+}
+.leader-vote-wait-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  height: 100%;
+  width: 100%;
+  overflow: hidden;
+  padding: 0vw 7vw;
+}
+progress {
+  width: 100%;
+  height: 1.5em;
+  margin: 0;
+  padding: 0;
+  border: none;
+  background-color: #f1f1f1;
+  border: 1px solid rgb(183, 183, 183);
 
+  accent-color: red;
 }
-.leader-vote-wait-container{
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: center;
-    height: 100%;
-    width: 100%;
-    overflow: hidden;
-    padding: 7vw;
-}
-progress{
-    width: 100%;
-    height: 1em;
-    margin: 0;
-    padding: 0;
-    border: none;
-    background-color: #f1f1f1;
+progress[value] {
+  color: red;
 }
 
 progress::-webkit-progress-bar {
-    background-color: #f1f1f1;
+  background-color: #f1f1f1;
+}
+progress::-webkit-progress-value {
+  background: #199F63;
 }
 
+.room-name {
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+}
