--- a/MauiBlazor/wwwroot/css/css.css
+++ b/MauiBlazor/wwwroot/css/css.css
@@ -149,23 +149,20 @@ button.choice-button {
   background-color: #888888;
 }
 
-button.styled,
-button.styled:enabled {
-  margin-bottom: 20px;
-  width: 90vw;
-  max-width: 55vw;
-  height: 10vh;
-  font-size: 4vh;
-  background-color: hsl(107, 50%, 72%);
-  border-radius: 2px;
-  border: none;
-  color: #222222;
-  box-shadow: 1px 1px hsl(0deg 0% 0% / 0.05), 0 2px 2px hsl(0deg 0% 0% / 0.052),
-    0 3px 6px hsl(0deg 0% 0% / 0.054), 0 5px 10px hsl(0deg 0% 0% / 0.056),
-    0 7px 14px hsl(0deg 0% 0% / 0.058);
-  transition: transform linear 0.15s, box-shadow linear 0.15s,
-    background-color linear 0.1s;
-}
+    button.styled,
+    button.styled:enabled {
+        margin-bottom: 20px;
+        width: 90vw;
+        max-width: 55vw;
+        height: 10vh;
+        font-size: 4vh;
+        background-color: #199F63;
+        border-radius: 2px;
+        border: none;
+        color: #222222;
+        box-shadow: 1px 1px hsl(0deg 0% 0% / 0.05), 0 2px 2px hsl(0deg 0% 0% / 0.052), 0 3px 6px hsl(0deg 0% 0% / 0.054), 0 5px 10px hsl(0deg 0% 0% / 0.056), 0 7px 14px hsl(0deg 0% 0% / 0.058);
+        transition: transform linear 0.15s, box-shadow linear 0.15s, background-color linear 0.1s;
+    }
 
 button.styled:enabled:hover,
 button.styled:enabled:active {
