--- a/MauiBlazor/wwwroot/css/css.css
+++ b/MauiBlazor/wwwroot/css/css.css
@@ -1,186 +1,128 @@
-﻿:root {
-  --main-bg: #f0f0f0;
-    --header-bg:#199F63;
-  --backarrow-size: 5vh;
-  --hamburger-size: 4.5vh;
-  --button-green: hsl(107, 50%, 72%);
-}
-body {
-    color: #000;
-    background-color: var(--main-bg);
-    overflow: hidden;
-}
-
-
-
-.app-container {
-  width: 100%;
-  height: 99vh;
-  padding-bottom: 30px;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
-  box-sizing: border-box;
-  overflow: hidden;
+﻿.app-container {
+    width: 100%;
+    max-width: 450px;
+    height: 90vh;
+    margin: 5vh auto;
+    border-radius: 5px;
+    display: flex;
+    flex-direction: column;
+    background-color: #f9f9f9;
+    justify-content: space-between;
 }
 
-.app-container .header {
-  background-color: var(--header-bg);
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  min-height: 30px;
-  height: 9vh;
-  width: 100%;
-  margin-bottom: 20px;
-  box-shadow: 0 1px 1px hsl(0deg 0% 0% / 0.05),
-    0 2px 2px hsl(0deg 0% 0% / 0.052), 0 3px 6px hsl(0deg 0% 0% / 0.054),
-    0 5px 10px hsl(0deg 0% 0% / 0.056), 0 7px 14px hsl(0deg 0% 0% / 0.058);
+.app-container .header{
+    padding: 15px;
+    background-color: #ff5555;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    min-height: 90px;
+    height: 100px;
+
 }
 
-.app-container .header .header-item {
-  height: 100%;
-  display: flex;
-  align-items: center;
-  margin-left: 10px;
+.app-container .header .header-item
+{
+
+    height: 100%;
 }
 
-.app-container .header .item1 {
-  flex-grow: 1;
-  height: 100%;
-}
+.app-container .header .item1{
+    width: 100px;
+    height: 100%;
 
-.app-container .header .item1 img {
-  width: var(--backarrow-size);
-  height: var(--backarrow-size);
-  opacity: 0.8;
 }
-
-.app-container .header .item1 img:hover {
-  opacity: 0.9;
-}
-
 .app-container .header .item2 {
-  flex-grow: 1;
-  height: 100%;
-}
-
-.app-container .header .item2 img {
-  width: var(--hamburger-size);
-  height: var(--hamburger-size);
-  margin-left: auto;
-  margin-right: 20px;
-  opacity: 0.7;
-}
-
-.app-container .header .item2 img:hover {
-  opacity: 0.8;
+    flex-grow: 1;
 }
 
 .app-container .header .appname {
-  height: 100%;
-  vertical-align: middle;
-  margin: auto;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-  font-size: 3vh;
-  font-weight: bold;
-  font-family: Segoe UI;
-  color: #292525;
+    flex-grow: 1;
+    /* background-color: #3333aa; */
+
+    text-align: right;
+    font-size: 24pt;
+    font-weight: bold;
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
+    color: #ffe3e3;
 }
 
-
-
 .app-container .main {
-  width: 100%;
-  overflow: hidden;
-  flex-grow: 1;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
-  position: relative;
+    padding: 15px;
+    overflow-y: auto;
 }
 
 .app-container .footer {
-  width: 100%;
-  min-height: 60px;
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 15px;
+    background-color: #222327;
+    min-height: 60px;
+}
+.app-container .footer .item1 {
+    flex-grow: 2;
 }
 
-button {
-  max-width: 500px;
-  height: 10vh;
-  font-size: 4vh;
-  background-color: #666666;
-  border: 1px solid #000;
-  border-radius: 5px;
-  color: #f0f0f0;
+.app-container .footer .item2 {
+    flex-grow: 2;
 }
 
-button.small {
-  width: 40vw;
-  height: 8vh;
+.app-container .footer .elicit {
+    padding: 5pt;
+    flex-grow: 1;
+    font-size: 42pt;
+    text-align: left;
+    color: #88cc66;
 }
 
-button.small-green {
-  width: 40vw;
-  background-color: rgb(81, 156, 81);
-  height: 9vh;
-  min-height: 60px;
+.main {
+    text-align: center;
 }
 
-button.small-red {
-  width: 40vw;
-  background-color: rgb(211, 66, 66);
-  height: 9vh;
-  min-height: 60px;
+.main input {
+    width:80%;
+    margin: auto;
+    height:50px;
+    border-radius:20px;
+    border: 1px solid #333333;
+    padding-left:20px;
+    padding-right:20px;
+    font-size: 24pt;
+    text-align: center;
+    margin-bottom: 50px;
 }
 
-button.choice-button {
-  height: 60px;
-  width: 90vw;
-  border-radius: 10px;
-  background-color: #888888;
+.main input:active {
+    color:#222327
 }
 
-    button.styled,
-    button.styled:enabled {
-        margin-bottom: 20px;
-        width: 90vw;
-        max-width: 55vw;
-        height: 10vh;
-        font-size: 4vh;
-        background-color: #199F63;
-        border-radius: 2px;
-        border: none;
-        color: #222222;
-        box-shadow: 1px 1px hsl(0deg 0% 0% / 0.05), 0 2px 2px hsl(0deg 0% 0% / 0.052), 0 3px 6px hsl(0deg 0% 0% / 0.054), 0 5px 10px hsl(0deg 0% 0% / 0.056), 0 7px 14px hsl(0deg 0% 0% / 0.058);
-        transition: transform linear 0.15s, box-shadow linear 0.15s, background-color linear 0.1s;
-    }
+.main a {
+    font-size: 24pt;
+    color:#222327;
+    text-decoration: none;
+    font-weight: bold;
 
-button.styled:enabled:hover,
-button.styled:enabled:active {
-  transform: scale(1.05);
-  box-shadow: 0 2px 4px hsl(0deg 0% 0% / 0.044),
-    0 4px 8px hsl(0deg 0% 0% / 0.046), 0 6px 12px hsl(0deg 0% 0% / 0.048),
-    0 8px 16px hsl(0deg 0% 0% / 0.05), 0 10px 20px hsl(0deg 0% 0% / 0.052);
-  transition: transform linear 0.1s, box-shadow linear 0.1s,
-    background-color linear 0.1s;
 }
 
-button.styled:disabled {
-  background-color: #ececec;
-  transition: background-color linear 0.1s;
+.main span {
+    color:#222327;
+    font-size: 24pt;
+}
+.main h2 {
+    text-align: left;
+    color:#222327
+}
+.main table {
+    text-align: left;
+    color:#222327;
+}
+.main td {
+    width: 20%;
 }
 
-button.styled:disabled:hover {
-  background-color: #ececec;
-  transform: scale(1);
-  transition: background-color linear 0.1s;
+.main textarea {
+    height: 100px;
+    text-align: left;
+    font-size: 18pt;
 }
